[package]
edition = "2021"
name = "val_trackers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = {path = "api"}
base64 = "0.13.1"
chrono = "0.4.23"
native-tls = "0.2"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = [
  "json",
]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio-tungstenite = {version = "*", features = ["native-tls"]}
iced_native = "0.8.0"
once_cell = "1.17.0"
dotenv = "0.15.0"
[dependencies.iced]
features = ["tokio", "debug", "image", "svg"]
version = "0.7"

[dependencies.tokio]
features = ["time", "full"]
version = "1"

[workspace]
members = [
  "api_testing",
  "api",
]

[patch.crates-io]
h2 = {git = "https://github.com/4JX/h2.git", branch = "imp"}
hyper = {git = "https://github.com/4JX/hyper.git", branch = "v0.14.18-patched"}
