[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.23"
cookie = "0.16.1"
cookie_store = "0.19.0"
reqwest-impersonate = {package = "reqwest-impersonate", path = "../../reqwest-impersonate", default-features = false, features = [
  # reqwest = {package = "reqwest-impersonate", git = "https://github.com/4JX/reqwest-impersonate.git", default-features = false, features = [
  "chrome",
  "json",
  "cookies",
]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# native-tls = "0.2"
bytes = "1.3.0"
regex = "1.7.1"
url = "2.3.1"
[dependencies.tokio]
features = ["full"]
version = "1"


